trunk/Archive2/a8/c6a50570b92a53/output
main.cpp: In function 'int id(int)':
main.cpp:1:15: error: named return values are no longer supported
 int id(int x) return x; {}
               ^
main.cpp:1:26: warning: no return statement in function returning non-void [-Wreturn-type]
 int id(int x) return x; {}
                          ^
main.cpp: At global scope:
main.cpp:1:5: warning: unused parameter 'x' [-Wunused-parameter]
 int id(int x) return x; {}
     ^
